--- a/styles/main.css
+++ b/styles/main.css
@@ -66,7 +66,8 @@ nav a {
 }
 
 @media screen and (max-width: 768px) {
-    header {
+    header,
+    header > * {
         display: block;
     }
     
@@ -111,6 +112,7 @@ h1 {
     padding-bottom: 0.5em;
     font-weight: 600;
     font-size: 300%;
+    line-height: 1.15em;
 }
 
 h4 {
@@ -224,6 +226,12 @@ footer {
 
 footer > * {
     display: block;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        display: block;
+    }
 }
 
 
