--- a/styles/main.css
+++ b/styles/main.css
@@ -20,8 +20,33 @@ img {
     border: none;
 }
 
+.caption {
+    font-size: 85%;
+    line-height: 1.6em;
+}
+
+.description {
+    font-size: 95%;
+    line-height: 1.5em;
+}
+
+h3 {
+    margin-top: 2em;
+}
+
+h4 + h5 {
+    margin-top: -1.5em;
+    margin-bottom: 0;
+    color: gray;
+}
+
 code {
-    font-family: 'IBM Plex Mono';
+    font-family: 'IBM Plex Mono', Consolas, 'Courier New', monospace;
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 4px;
 }
 
 main a:not(.button):not(.fa):not(.arrow) {
@@ -51,22 +76,31 @@ h1 {
 h4 {
     margin-bottom: 0;
     text-transform: uppercase;
-    font-size: 100%;
+    font-size: 95%;
+    margin-top: 2.5em;
+    margin-bottom: 1.5em;
+    line-height: 1.25em;
 }
 
-h4 a {
+h4 a,
+h5 a {
     background: rgba(255, 84, 112, 0.4) !important;
     background: -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(60%,transparent),color-stop(60%,rgba(255, 84, 112,.4)),to(rgba(255, 84, 112, .4)))!important;
     background: linear-gradient(to bottom,transparent 0,transparent 60%,rgba(255, 84, 112, .4) 60%,rgba(255, 84, 112, .4) 100%) !important;
 }
 
-h4 a:focus, h4 a:hover {
+h4 a:focus, 
+h4 a:hover,
+h5 a:focus,
+h5 a:hover {
     background: var(--color-pink) !important;
     color: white !important;
 }
 
 h4 a:focus::after, 
-h4 a:hover::after {
+h4 a:hover::after,
+h5 a:focus::after,
+h5 a:hover::after {
     content: "→";
 }
 
@@ -76,6 +110,18 @@ a.anchor {
 
 .blue {
     color: var(--color-blue);
+}
+
+.blue-block {
+    color: white;
+    font-weight: bold;
+    background-color: var(--color-blue);
+}
+
+.pink-block {
+    color: white;
+    font-weight: bold;
+    background-color: var(--color-pink);
 }
 
 .soon {
@@ -137,22 +183,68 @@ nav a {
 /* LISTS */
 
 ul {
-    margin-bottom: 1.5em;
+    margin-bottom: 1em;
     list-style: outside none;
-    padding: 0;
+    margin-left: 0;
+    padding-left: 2em;
 }
 
-/*
-ul li:before {
-    content: "+";
-    padding-right: 0.95em;
+li {
+    text-indent: -2em;
 }
-*/
 
 ul li >,
 ol li > * {
     padding: 0;
     margin: 0;
+}
+
+.list-bold li {
+    font-weight: bold;
+}
+
+.list-plus li:before {
+    content: "+";
+    padding-right: 1em;
+}
+
+.list-arrows li:before {
+    content: "→ ";
+}
+
+.list-bar {
+    padding-left: 0;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    line-height: 2em;
+}
+
+.list-bar li {
+    display: inline;
+    padding: .25em .5em;
+    color: white;
+}
+
+.list-bar.actions li {
+    background-color: var(--color-slate);
+}
+
+.list-bar.tools li {
+    background-color: var(--color-pink);
+}
+
+.list-bar.buttons li {
+    transition: all 0.25s ease-in-out;  
+}
+
+.list-bar.buttons li:hover {
+    opacity: 0.5;
+    transition: all 0.25s;  
+}
+
+.list-bar.buttons li a {
+    color: white;
+    text-decoration: none;  
 }
 
 /* LAYOUT: CONTAINERS*/
@@ -161,25 +253,20 @@ main {
     padding-top: 8em;
 }
 
-main .section {
-    padding-top: 1em;
-    padding-bottom: 1em;
-}
-
 .narrow {
     max-width: 480px;
-    padding: 3em;
+    padding: 1.5em 3em;
     margin: 0 auto;
 }
 
 .wide {
     max-width: 768px;
-    padding: 3em;
+    padding: 1.5em 3em;
     margin-left: auto;
     margin-right: auto;
 }
 
-.full {
+.bleed {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -207,28 +294,34 @@ main .section {
 }
 
 .half {
-    width: 50%;
+    width: calc(50% - 1.5em);
+    padding-right: 1.5em;
 }
 
 .third {
-    width: 33.333%;
+    width: calc(33.33% - 1.5em);
+    padding-right: 1.5em;
 }
 
 .quarter {
-    width: 25%;
+    width: calc(25% - 1.5em);
+    padding-right: 1.5em;
 }
 
 @media screen and (max-width: 720px) {
     .half {
         width: 100%;
+        padding-right: 0;
     }
     
     .third {
         width: 100%;
+        padding-right: 0;
     }
     
     .quarter {
         width: 50%;
+        padding-right: 0;
     }
 }
 
@@ -352,112 +445,37 @@ footer > * {
 
 /* PAGE STYLES: WORK */
 
-.project > *:last-child {
-    margin-bottom: 24px;
-}
-
-.project-container {
+.projects {
     margin-bottom: 12px;
 }
 
-.project-container .half:nth-child(odd) {
-    margin-right: 6px;
-}
-
-.project-container .half:nth-child(even) {
-    margin-left: 6px;
-}
-
-.project-container .third:nth-child(3n+1) {
-    margin-right: 6px;
-}
-
-.project-container .third:nth-child(3n+2) {
-    margin-right: 6px;
-    margin-left: 6px;
-}
-
-.project-container .third:nth-child(3n) {
-    margin-left: 6px;
-}
-
-.project-container .third .subtitle {
-    margin-top: -6px;
-    margin-bottom: 18px;
-}
-
-.project {
+.projects > * {
     background-color: #f5f8fc;
 }
 
-.project.half {
-    width: calc(50% - 6px);
-    margin-bottom: 12px;
+.projects > * > *:last-child {
+    margin-bottom: 24px;
 }
 
-.project.third {
-    width: calc(33.333% - 9px);
-    margin-bottom: 12px;
-}
-
-.project.full {
-    width: 100%;
-}
-
-.project > *:not(img){
+.projects > * > *:not(img) {
     margin-left: 24px;
     margin-right: 24px;
     display: block;
 }
 
-.project > *:first-child:not(img) {
+.projects > * > *:first-child:not(img) {
     margin-top: 24px;
 }
 
-@media all and (max-width: 720px) {
-    .project img {
-        width: 100% !important;
-        height: 270px;
-        float: none;
-    }
-    
-    .project.half {
-        width: 100%;
-    }
-    
-    .project-container .half:nth-child(odd) {
-        margin-right: 0;
-    }
-
-    .project-container .half:nth-child(even) {
-        margin-left: 0;
-    }
+.projects .full {
+    width: 100%;
 }
 
-/* PAGE STYLES: WORK (PROJECT PANELS) */
-
-.title {
-    font-size: 95%;
-    margin-top: 36px;
-    margin-bottom: ;
-    line-height: 1.25em;
-}
-
-.description {
-    font-size: 95%;
-    line-height: 1.5em;
-}
-
-.project.full .title {
+.projects .full .title {
     margin-top: 18px;
 }
 
-.project.half img {
-    object-fit: cover;
-    height: 240px;
-}
-
-.project.full img {
+.projects .full img {
     height: 100%;
     max-width: 50%;
     object-fit: cover;
@@ -465,7 +483,50 @@ footer > * {
     margin-right: 24px;
 }
 
-.project .title {
+.projects .half {
+    width: calc(50% - 6px);
+    margin-bottom: 12px;
+    padding-right: 0;
+}
+
+.projects .half img {
+    object-fit: cover;
+    height: 240px;
+}
+
+.projects .half:nth-child(odd) {
+    margin-right: 6px;
+}
+
+.projects .half:nth-child(even) {
+    margin-left: 6px;
+}
+
+.projects .third {
+    width: calc(33.333% - 9px);
+    margin-bottom: 12px;
+    padding-right: 0;
+}
+
+.projects .third:nth-child(3n+1) {
+    margin-right: 6px;
+}
+
+.projects .third:nth-child(3n+2) {
+    margin-right: 6px;
+    margin-left: 6px;
+}
+
+.projects .third:nth-child(3n) {
+    margin-left: 6px;
+}
+
+.projects .third .subtitle {
+    margin-top: -6px;
+    margin-bottom: 18px;
+}
+
+.projects .title {
     font-size: 120%;
     font-weight: bold;
     text-transform: uppercase;
@@ -474,22 +535,20 @@ footer > * {
     margin-bottom: 18px;
 }
 
-.project .subtitle {
+.projects .subtitle {
     font-weight: bold;
-    margin-left: 24px;
     margin-top: 6px;
     margin-bottom: 6px;
     line-height: 1em;
 }
 
-.project .description {
-    margin-left: 24px;
+.projects .description {
     margin-top: 18px;
     font-size: 85%;
     line-height: 1.25em;
 }
 
-.project .label {
+.projects .label {
     text-transform: uppercase;
     font-size: 90%;
     font-weight: bold;
@@ -498,68 +557,33 @@ footer > * {
 }
 
 @media screen and (max-width: 720px) {
-    .project.full img {
+    .projects img {
+        width: 100% !important;
+        height: 270px;
+        float: none;
+    }
+    
+    .projects .full img {
         max-width: 100% !important;
         height: 270px;
         float: none;
     }
-}
+    
+    .projects .half {
+        width: 100%;
+    }
+    
+    .projects .half:nth-child(odd) {
+        margin-right: 0;
+    }
 
-/* LISTS */
-
-.arrow-list.bold-items li {
-    font-weight: bold;
-}
-
-.arrow-list li:before {
-    content: "→ ";
-}
-
-.bar-list {
-    margin-top: 12px;
-    margin-bottom: 12px;
-    line-height: 2em;
-}
-
-.bar-list li {
-    display: inline;
-    padding: .25em .5em;
-    color: white;
-}
-
-.bar-list.actions li {
-    background-color: var(--color-slate);
-}
-
-.bar-list.tools li {
-    background-color: var(--color-pink);
-}
-
-.bar-list.buttons li {
-    transition: all 0.25s ease-in-out;  
-}
-
-.bar-list.buttons li:hover {
-    opacity: 0.5;
-    transition: all 0.25s;  
-}
-
-.bar-list.buttons li a {
-    color: white;
-    text-decoration: none;  
+    .projects .half:nth-child(even) {
+        margin-left: 0;
+    }
 }
 
 /* CAROUSEL */
 
 .carousel-control {
     text-align: center;
-}
-
-/* WAZE PAGE */
-
-.img-full-caption {
-    font-size: 85%;
-    display: block;
-    margin-bottom: 12px;
-    line-height: 1.6em;
 }
