--- a/topcourses/style.css
+++ b/topcourses/style.css
@@ -6,7 +6,7 @@ html {
 
 h1 {
     font-family: 'Work Sans', sans-serif;
-    font-size: 6em;
+    font-size: 5em;
     line-height: 85%;
     margin: 0.5em 0 0.5em 0;
 }
@@ -61,4 +61,34 @@ div.viz h2 {
 
 svg {
     margin-top: 4em;
+}
+
+.row.wide {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.row.narrow {
+    max-width: 720px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cols {
+    display: -webkit-flex;
+    -webkit-flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.viz {
+    width: 100%;
+    padding-right: 0;
+}
+
+@media screen and (min-width: 640px) {
+    .row .viz {
+        width: calc(33.33% - 3em);
+        padding-right: 3em;
+    }
 }
