--- a/topcourses/style.css
+++ b/topcourses/style.css
@@ -1,14 +1,17 @@
 html {
     background-color: #fefefe;
-    font-family: 'Work Sans', sans-serif;
-    padding: 1.5em;
+    font-family: 'IBM Plex Sans', sans-serif;
+}
+
+body {
+    margin: 0;
 }
 
 h1 {
     font-family: 'Work Sans', sans-serif;
     font-size: 4em;
     line-height: 85%;
-    margin: 0.5em 0 0.5em 0;
+    margin: 0.25em 0 0.5em 0;
 }
 
 h2 {
@@ -21,35 +24,25 @@ h2 {
     font-family: 'Work Sans', sans-serif;
     font-size: 1.75em;
     margin: 0.5em 0 0.5em 0;
+    font-weight: 700;
 }
 
 .byline {
     font-family: 'Work Sans', sans-serif;
     line-height: 75%;
-    margin: 1.5em 0 0.5em 0;
+    margin: 1.25em 0 0.5em 0;
+    font-weight: 700;
 }
 
 .ydn-logo {
     width: 50%;
-    max-width: 400px;
+    max-width: 300px;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 3em;
-}
-
-.article-text {
-    display: block;
-    margin-top: 3em;
-    margin-bottom: 3em;
-}
-
-.article-text p {
-    margin-bottom: 24px;
+    margin: 1em auto;
 }
 
 div.viz h2 {
-    margin-bottom: 0.25em;
+    margin-bottom: 0em;
 }
 
 .description {
@@ -64,15 +57,21 @@ svg {
     margin-top: 2em;
 }
 
-.row.wide {
-    max-width: 1440px;
+.row.bleed {
     margin: 0 auto;
 }
 
+.row.wide {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 1.5em;
+}
+
 .row.narrow {
-    max-width: 720px;
+    max-width: 640px;
     margin-left: auto;
     margin-right: auto;
+    padding: 1.5em 0 0 0;
 }
 
 .cols {
@@ -85,6 +84,7 @@ svg {
 .viz {
     width: 100%;
     padding-right: 0;
+    font-family: 'Work Sans'
 }
 
 @media screen and (min-width: 640px) {
@@ -92,4 +92,23 @@ svg {
         width: calc(33.33% - 3em);
         padding-right: 3em;
     }
+    
+    .row.wide {
+        padding: 1.5em 4.5em;
+    }
+    
+    .header-img {
+        height: 60vh;
+    }
+    
+    
+    .article-info {
+        margin-top: 3em;
+    }
+
+}
+
+.header-img {
+    width: 100%;
+    object-fit: cover;
 }
