--- a/topcourses/style.css
+++ b/topcourses/style.css
@@ -71,7 +71,7 @@ svg {
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
-    padding: 1.5em 0 0 0;
+    padding: 1.5em
 }
 
 .cols {
