--- a/topcourses/style.css
+++ b/topcourses/style.css
@@ -71,7 +71,7 @@ svg {
     max-width: 640px;
     margin-left: auto;
     margin-right: auto;
-    padding: 1.5em
+    padding: 1.5em 1.5em 0 1.5em;
 }
 
 .cols {
@@ -87,11 +87,12 @@ svg {
     font-family: 'Work Sans'
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 768px) {
     .row .viz {
         width: calc(33.33% - 3em);
         padding-right: 3em;
     }
+    
     
     .row.wide {
         padding: 1.5em 4.5em;
